packages/uow-audit/main/default/objects/UoWAuditRecordIndex__c/UoWAuditRecordIndex__c.object-meta.xml
<CustomObject>
    <description>Reverse-lookup index linking a business record Id to the UoW audit work item that touched it. One row per sampled record. Enables the record-page Audit Activity component to query "which work items/transactions touched this record" (record Ids are otherwise only inside the unfilterable Snapshot__c long text area).</description>
    <label>Audit Record Index</label>
    <nameField>
        <displayFormat>RI-{0000000000}</displayFormat>
        <label>Record Index Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Record Indexes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>