packages/uow-audit/main/default/objects/UoWAuditRecordIndex__c/fields/AuditWorkItem__c.field-meta.xml
<CustomField>
    <fullName>AuditWorkItem__c</fullName>
    <description>Master-Detail relationship to the work item that touched this record.</description>
    <inlineHelpText>The audit work item that processed this record.</inlineHelpText>
    <label>Audit Work Item</label>
    <referenceTo>UoWAuditWorkItem__c</referenceTo>
    <relationshipName>RecordIndexes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>