packages/uow-audit/main/default/objects/UoWAuditRecordIndex__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>DML operation performed on the record (e.g. INSERT, UPDATE, DELETE). Denormalized from the work item's DmlOperation__c with any _OP suffix stripped.</description>
    <label>Operation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>