packages/uow-audit/main/default/objects/UoWAuditRecordIndex__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Id of the business record (the snapshot rid) touched by the work item. External Id so it is indexed and filterable for reverse lookup from a record page.</description>
    <externalId>true</externalId>
    <inlineHelpText>The business record this audit work item operated on.</inlineHelpText>
    <label>Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>