packages/uow-audit/main/default/objects/UoWAuditRecordIndex__c/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <description>SObject API name of the indexed record (e.g. Account, Contact, CustomObject__c). Denormalized from the work item so the record page can badge without a join.</description>
    <label>SObject Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>