packages/uow-audit/main/default/objects/UoWAuditRecordIndex__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>When the work item that touched this record completed. Denormalized from the work item's EndTime__c so the record page can order most-recent-first without a join.</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>